macro(add_unittest NAME)
  add_executable(ut-${NAME} test_${NAME}.cpp)
  target_link_libraries(ut-${NAME} tpie ${Boost_LIBRARIES})
  set(MTESTS ${ARGV})
  list(REMOVE_AT MTESTS 0)
  foreach(TEST ${MTESTS})
    add_test(${NAME}_${TEST} ut-${NAME} ${TEST})
  endforeach(TEST)
endmacro(add_unittest)

macro(add_fulltest NAME)
 set(MTESTS ${ARGV})
  list(REMOVE_AT MTESTS 0)
  foreach(TEST ${MTESTS})
    add_test(NAME ${NAME}_${TEST} CONFIGURATIONS FullTest COMMAND ut-${NAME} ${TEST})
  endforeach(TEST)
endmacro(add_fulltest)

add_unittest(hashmap chaining linear_probing iterators memory)
add_unittest(internal_queue basic memory)

add_unittest(external_priority_queue basic)
add_fulltest(external_priority_queue medium large large_cycle)

add_unittest(internal_priority_queue basic memory)
add_fulltest(internal_priority_queue large_cycle)

add_unittest(array basic iterators memory bit_basic bit_iterators bit_memory)
add_unittest(streaming source sink sort)
add_unittest(disjoint_set basic memory)

add_executable(streaming streaming.cpp)
target_link_libraries(streaming tpie)

add_executable(stream_test stream.cpp)
target_link_libraries(stream_test tpie)

add_test(streaming::stream_source--memory streaming stream_source memory)
add_test(streaming::stream_source::minimum_memory streaming stream_source minimum_memory)
add_test(streaming::stream_source::process streaming stream_source process)
add_test(streaming::stream_source::process_back streaming stream_source process_back)
add_test(streaming::stream_sink--memory streaming stream_sink memory)
add_test(streaming::stream_sink::minimum_memory streaming stream_sink minimum_memory)
add_test(streamirg::stream_sink--process streaming stream_sink process)
add_test(streaming::sort--memory streaming sort memory)
add_test(streaming::sort--minimum_memory streaming sort minimum_memory)
add_test(streaming::sort--process streaming sort process)
add_test(streaming::pull_sort--memory streaming pull_sort memory)
add_test(streaming::pull_sort--minimum_memory streaming pull_sort minimum_memory)
add_test(streaming::pull_sort--process streaming pull_sort process)
add_test(streaming::buffer--memory streaming buffer memory)
add_test(streaming::buffer--minimum_memory streaming buffer minimum_memory)
add_test(streaming::buffer--process streaming buffer process)
add_test(streaming::pull_buffer--memory streaming pull_buffer memory)
add_test(streaming::pull_buffer--minimum_memory streaming pull_buffer minimum_memory)
add_test(streaming::pull_buffer--process streaming pull_buffer process)
add_test(streaming--virtual--memory streaming virtual memory)
add_test(streaming--virtual--minimum_memory streaming virtual minimum_memory)
add_test(streaming--virtual--process streaming virtual process)

add_test(streaming::push_block_buffer--memory streaming push_block_buffer memory)
add_test(streaming::push_block_buffer--minimum_memory streaming push_block_buffer minimum_memory)
add_test(streaming::push_block_buffer--process streaming push_block_buffer process)
add_test(streaming::pull_block_buffer--memory streaming pull_block_buffer memory)
add_test(streaming::pull_block_buffer--minimum_memory streaming pull_block_buffer minimum_memory)
add_test(streaming::pull_block_buffer--process streaming pull_block_buffer process)

add_test(file_accessor_stdio stream_test file_accessor_stdio)
add_test(file_accessor_posix stream_test file_accessor_posix)
add_test(file_stream stream_test file_stream)
add_test(substreams stream_test substreams)
#add_test(fd_file stream_test fd_file)
