macro(add_unittest NAME)
  add_executable(ut-${NAME} test_${NAME}.cpp)
  target_link_libraries(ut-${NAME} tpie ${Boost_LIBRARIES})
  set(MTESTS ${ARGV})
  list(REMOVE_AT MTESTS 0)
  foreach(TEST ${MTESTS})
    add_test(${NAME}_${TEST} ut-${NAME} ${TEST})
  endforeach(TEST)
endmacro(add_unittest)

macro(add_fulltest NAME)
 set(MTESTS ${ARGV})
  list(REMOVE_AT MTESTS 0)
  foreach(TEST ${MTESTS})
    add_test(NAME ${NAME}_${TEST} CONFIGURATIONS FullTest COMMAND ut-${NAME} ${TEST})
  endforeach(TEST)
endmacro(add_fulltest)

add_unittest(hashmap chaining linear_probing iterators memory)
add_unittest(internal_queue basic memory)
add_unittest(internal_stack basic memory)
add_unittest(internal_vector basic memory)

add_unittest(external_priority_queue basic)
add_fulltest(external_priority_queue medium large large_cycle)

add_unittest(internal_priority_queue basic memory)
add_fulltest(internal_priority_queue large_cycle)

add_unittest(array basic iterators memory bit_basic bit_iterators bit_memory)
add_unittest(disjoint_set basic memory)

add_unittest(streaming)

add_executable(stream_test stream.cpp)
target_link_libraries(stream_test tpie)

add_test(streaming::stream_source--memory ut-streaming stream_source memory)
add_test(streaming::stream_source::minimum_memory ut-streaming stream_source minimum_memory)
add_test(streaming::stream_source::process ut-streaming stream_source process)
add_test(streaming::stream_source::process_back ut-streaming stream_source process_back)
add_test(streaming::stream_sink--memory ut-streaming stream_sink memory)
add_test(streaming::stream_sink::minimum_memory ut-streaming stream_sink minimum_memory)
add_test(streamirg::stream_sink--process ut-streaming stream_sink process)
add_test(streaming::sort--memory ut-streaming sort memory)
add_test(streaming::sort--minimum_memory ut-streaming sort minimum_memory)
add_test(streaming::sort--process ut-streaming sort process)
add_test(streaming::pull_sort--memory ut-streaming pull_sort memory)
add_test(streaming::pull_sort--minimum_memory ut-streaming pull_sort minimum_memory)
add_test(streaming::pull_sort--process ut-streaming pull_sort process)
add_test(streaming::buffer--memory ut-streaming buffer memory)
add_test(streaming::buffer--minimum_memory ut-streaming buffer minimum_memory)
add_test(streaming::buffer--process ut-streaming buffer process)
add_test(streaming::pull_buffer--memory ut-streaming pull_buffer memory)
add_test(streaming::pull_buffer--minimum_memory ut-streaming pull_buffer minimum_memory)
add_test(streaming::pull_buffer--process ut-streaming pull_buffer process)
add_test(streaming--virtual--memory ut-streaming virtual memory)
add_test(streaming--virtual--minimum_memory ut-streaming virtual minimum_memory)
add_test(streaming--virtual--process ut-streaming virtual process)

add_test(streaming::push_block_buffer--memory ut-streaming push_block_buffer memory)
add_test(streaming::push_block_buffer--minimum_memory ut-streaming push_block_buffer minimum_memory)
add_test(streaming::push_block_buffer--process ut-streaming push_block_buffer process)
add_test(streaming::pull_block_buffer--memory ut-streaming pull_block_buffer memory)
add_test(streaming::pull_block_buffer--minimum_memory ut-streaming pull_block_buffer minimum_memory)
add_test(streaming::pull_block_buffer--process ut-streaming pull_block_buffer process)


add_test(file_accessor_stdio stream_test file_accessor_stdio)
if (WIN32)
   add_test(file_accessor_posix stream_test file_accessor_win32)
else (WIN32)
   add_test(file_accessor_posix stream_test file_accessor_posix)
endif (WIN32)
add_test(file_stream stream_test file_stream)
add_test(substreams stream_test substreams)

